--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "next-core-application",
-  "version": "2.5.3",
+  "version": "2.5.4",
   "description": "The Augmented.js Next - Application.",
   "main": "dist/next-core-application.js",
   "scripts": {
-    "dev": "webpack --mode development --module-bind js=babel-loader --progress",
-    "build": "webpack --mode production --module-bind js=babel-loader --progress",
+    "dev": "webpack --mode development --progress",
+    "build": "webpack --mode production --progress",
     "lint": "eslint ./src/index.js",
-    "test": "mocha --require babel-core/register --require test/helper.js -c test/*Spec.js",
+    "test": "mocha --require @babel/register --require test/helper.js -c test/*Spec.js",
     "start": "node index.js",
     "docs": "rm -rf jsdoc && jsdoc ./src -r -d ./jsdoc/ -R ./README.md -t ./node_modules/foodoc/template -c ./jsdoc.conf.json -P ./package.json",
+    "readme": "./node_modules/documentation/bin/documentation.js readme ./src/index.js -f md --section=API",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
     "rebuild": "npm run clean && npm install && npm run build"
@@ -25,24 +26,24 @@
   "author": "Bob Warren <jedi.master@augmentedjs.com> (http://www.augmentedjs.com)",
   "license": "Apache-2.0",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
-    "eslint": "^3.2.2",
-    "eslint-config-kentcdodds": "^9.0.2",
+    "chai": "^4.2.0",
+    "eslint": "^6.2.0",
+    "eslint-config-kentcdodds": "^14.3.4",
     "foodoc": "0.0.9",
-    "jsdoc": "^3.5.5",
-    "jsdom": "^11.12.0",
-    "mocha": "^4.1.0",
-    "mocha-jsdom": "^1.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^2.1.5"
+    "jsdoc": "^3.6.3",
+    "jsdom": "^15.1.1",
+    "mocha": "^6.2.0",
+    "mocha-jsdom": "^2.0.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "@babel/core": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "documentation": "^12.1.1"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "bugs": {
     "url": "https://github.com/Augmentedjs/next-core-application/issues"
   },
